src/golden/objects/errors/test.golden/ctorOnInstance.ut
	test you can't call a ctor on an instance
		data State[Number] inst <- State.obligatory
		data State[Number] wrong <- inst.obligatory